# modern-control-systems

./: .gitignore  README.md  display_utils.py  jupyter_runner.py  main.py  pyproject.toml  requirements.md
ch-02/: CH02_S09_E15 Transfer Functions.ipynb  CH02_S09_E15.m  CH02_S09_E16.ipynb  CH02_S09_E16.m  CH02_S09_E18.ipynb  CH02_S09_E19.ipynb  CH02_S09_E20.ipynb  CH2_S09.m
ch-02/problems/: CH02_CP02.ipynb  CH02_CP05.ipynb  CH02_CP07.ipynb  CH02_CP09.ipynb
ch-03/: CH03_S09.m  CH03_S10.m
ch-03/problems/: CH03_CP03.ipynb  CH03_CP05.ipynb  CH03_CP06.ipynb  CH03_CP08.ipynb
ch-04/: CH04_S09_E04.ipynb  CH04_S09_E04.m  CH04_S10.ipynb
ch-05/: CH05_S10_E11.m
ch-06/: CH06_S06_E11.m  CH06_S07.m
ch-08/: CH08_S07_E08.m  CH08_S08.m
ch-09/: CH09_S10.m  CH09_S10_E13.m
ch-10/: CH10_S13_E15_01.m  CH10_S13_E15_02.m  CH10_S13_E15_03.m  CH10_S13_E15_04.m
ch-11/: CH11_S10_E16.m  CH11_S10_E17_01.m  CH11_S10_E17_02.m  CH11_S10_E18.m
ch-12/: CH12_S10_E12_1.m  CH12_S10_E12_2.m
ch-13/: CH13_S11.m  CH13_S11_E12_1.m  CH13_S11_E12_2.m  CH13_S11_E13.m
ch-2/: 02-09 Spring Mass Damper.ipynb
ch-2/examples/: 02-19 Multiloop Reduction.ipynb
ch-2/problems/: CP02-01.ipynb  CP02-03.ipynb  CP02-04.ipynb  CP02-06.ipynb  CP02-08.ipynb  CP02-10.ipynb
ch-3/: 03-09 State Variable Models.ipynb  03-10 Disk Drive Read System.ipynb
ch-3/problems/: 03-01.ipynb  03-02.ipynb  03-04.ipynb  03-07.ipynb
ch-5/: S05_10.m  S05_11.m
ch-7/: S07_09.m  S07_10.m
ch-8/: CH08_S07.m
ch-9/: CH09_S10_E14.m  CH09_S11.m
ch4/: 04-10.m
ch4/examples/: 04-05 English Channel boring machines.ipynb
